# AltTaber

./: CMakeLists.txt  README.md  VersionInfo.rc.in
header/: UpdateDialog.h  widget.h
header/utils/: AppUtil.h  ComInitializer.h  ConfigManager.h  ConfigManagerBase.h  IconOnlyDelegate.h  KeyboardHooker.h  QtWin.h  ScheduledTask.h  SingleApp.h  Startup.h  SystemTray.h  TaskbarWheelHooker.h  Util.h  setWindowBlur.h  uiautomation.h  winEventHook.h
src/: UpdateDialog.cpp  main.cpp  widget.cpp  winEventHook.cpp
src/utils/: AppUtil.cpp  IconOnlyDelegate.cpp  KeyboardHooker.cpp  QtWin.cpp  ScheduledTask.cpp  TaskbarWheelHooker.cpp  Util.cpp  setWindowBlur.cpp  uiautomation.cpp  winEventHook.cpp
ui/: UpdateDialog.ui  widget.ui
